# arbfinder-suite

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_AGENT_TASKS.md  BUGS_AND_TASKS.md  CHANGELOG.md  CLOUDFLARE_DEPLOYMENT_GUIDE.md  CLOUDFLARE_SETUP.md  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  CREATING_ISSUES.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_TESTS.md  DEVELOPER.md  Dockerfile  FEATURES.md  FEATURES_OVERVIEW.md  GITHUB_FEATURES.md  IMPLEMENTATION_COMPLETED.md  IMPLEMENTATION_GITHUB_FEATURES.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_v2.1.md  IMPROVEMENTS.md  IMPROVEMENTS_v0.4.0.md  ISSUE_CREATION_GUIDE.md  MODEL_PROMPTS.md  Makefile  PLATFORM_GUIDE.md  PROJECT_MANAGEMENT.md  PROJECT_SETUP_SUMMARY.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  PROJECT_V2_IMPLEMENTATION_SUMMARY.md  PROMPTS.md  QUICKSTART.md  QUICKSTART_PLATFORM.md  (+27 more)
.github/: CREATING_ISSUES.md  LABELS.md  MODEL_PROMPTS.md  PROJECT_SETUP.md  PROMPTS.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  cspell.json  dependabot.yml  labeler.yml  markdown-link-check-config.json
backend/: .env.example  __init__.py  analysis_cli.py  arb_finder.py  cli.py  config.py  logging_etl.py  requirements.txt  site_analysis_cli.py  tui.py  utils.py  watch.py
cloudflare/: package-lock.json  package.json  wrangler.toml
config/: crawler.toml
coverage-report/: class_index.html  function_index.html  index.html  status.json  z_05c79680ac561cdb___init___py.html  z_05c79680ac561cdb_api_analysis_agent_py.html  z_05c79680ac561cdb_mcp_server_agent_py.html  z_05c79680ac561cdb_schema_generator_agent_py.html  z_05c79680ac561cdb_site_analysis_crew_py.html  z_1b6343432fc30d65___init___py.html  z_1b6343432fc30d65_api_discoverer_py.html  z_1b6343432fc30d65_historical_data_py.html  z_1b6343432fc30d65_investigator_py.html  z_1b6343432fc30d65_robots_analyzer_py.html  z_1b6343432fc30d65_terms_analyzer_py.html  z_3f2cd62ee6df297d___init___py.html  z_3f2cd62ee6df297d_agents_py.html  z_3f2cd62ee6df297d_alerts_py.html  z_3f2cd62ee6df297d_crawler_py.html  z_3f2cd62ee6df297d_crews_py.html  z_3f2cd62ee6df297d_live_updates_py.html  z_3f2cd62ee6df297d_main_py.html  z_3f2cd62ee6df297d_snipes_py.html  z_6e0211776d62dc3d___init___py.html  z_6e0211776d62dc3d_client_py.html  z_6e0211776d62dc3d_completion_py.html  z_6e0211776d62dc3d_models_py.html  z_6e0211776d62dc3d_streaming_py.html  z_6e0211776d62dc3d_utils_py.html  z_8f2d779dd4b8633f___init___py.html  z_8f2d779dd4b8633f_cloudflare_client_py.html  z_8f2d779dd4b8633f_minio_client_py.html  z_c603df6d78bb84d7___init___py.html  z_c603df6d78bb84d7_crawler_service_py.html  z_e17dcb4e28158375___init___py.html  z_e17dcb4e28158375_analysis_cli_py.html  z_e17dcb4e28158375_arb_finder_py.html  z_e17dcb4e28158375_cli_py.html  z_e17dcb4e28158375_config_py.html  z_e17dcb4e28158375_logging_etl_py.html  (+4 more)
crew/: crewai.yaml
docs/: AGENTS.md  CI_CD_AUTOMATION.md  CLOUDFLARE_SETUP.md  ENTERPRISE_ROADMAP.md  FEATURES.md  IMPLEMENTATION_GUIDE.md  NEW_FEATURES.md  OPENROUTER_INTEGRATION.md  README.md  RESEARCH_REPORT.md  SRS.md  SUMMARY.md  TODO.md
(+208 files in other folders)
