[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arbfinder-suite"
version = "0.4.0"
description = "Find arbitrage opportunities across multiple marketplaces"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "ArbFinder Contributors"}
]
keywords = ["arbitrage", "marketplace", "price-comparison", "deals"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.5",
    "httpx>=0.27.0",
    "rapidfuzz>=3.9.6",
    "pydantic>=2.9.2",
    "stripe>=10.6.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "crewai>=0.1.0",
    "openai>=1.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "prisma>=0.11.0",
    "crawl4ai>=0.2.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "toml>=0.10.2",
    "minio>=7.2.0",
    "boto3>=1.34.0",
    "Pillow>=10.1.0",
    "psycopg2-binary>=2.9.9",
    "pymysql>=1.1.0",
    "sqlalchemy>=2.0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
arbfinder = "arbfinder.cli:main"
arbfinder-server = "arbfinder.api.main:run_server"

[project.urls]
Homepage = "https://github.com/cbwinslow/arbfinder-suite"
Repository = "https://github.com/cbwinslow/arbfinder-suite"
Issues = "https://github.com/cbwinslow/arbfinder-suite/issues"

[tool.setuptools]
packages = ["arbfinder", "arbfinder.api"]
package-dir = {"arbfinder" = "backend"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=arbfinder",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["arbfinder"]
omit = ["*/tests/*", "*/__pycache__/*", "*/venv/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
